prevent layout shift for search, add new document button

--- a/apps/frontend/src/components/AuthState/AuthState.module.scss
+++ b/apps/frontend/src/components/AuthState/AuthState.module.scss
@@ -3,7 +3,7 @@
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 12px;
+  gap: 20px;
 
   button {
     font-size: 12px;
